force-app/main/default/objects/Apttus__WizardInputGroup__c/Apttus__WizardInputGroup__c.object-meta.xml
<CustomObject>
    <description>Groups input controls within a step</description>
    <label>Wizard Input Group (Deprecated)</label>
    <nameField>
        <label>Wizard Input Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Input Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>