force-app/main/default/objects/Apttus__WizardInputGroup__c/fields/Apttus__Active__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Signifies that the Input Group within a Step is Active. Setting Step as Active automatically activates the included Input Groups.</description>
    <inlineHelpText>Signifies that the Input Group within a Step is Active. Setting Step as Active automatically activates the included Input Groups.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>