force-app/main/default/objects/Apttus__WizardInputGroup__c/fields/Apttus__Repeatable__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Repeatable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the input group is a repeatable instance</description>
    <inlineHelpText>Indicates that the input group is a repeatable instance</inlineHelpText>
    <label>Repeatable</label>
    <type>Checkbox</type>
</CustomField>