force-app/main/default/objects/Apttus__WizardInputGroup__c/fields/Apttus__Sequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Sequence__c</fullName>
    <description>Sequence of Input Group within a step.</description>
    <inlineHelpText>Sequence of Input Group within a step.</inlineHelpText>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>