force-app/main/default/objects/Apttus__WizardInputGroup__c/fields/Apttus__Table__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Table__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this is a tabular/horizontal group</description>
    <inlineHelpText>Indicates this is a tabular/horizontal group</inlineHelpText>
    <label>Table</label>
    <type>Checkbox</type>
</CustomField>